--- a/src/public/css/bootstrap-theme.css
+++ b/src/public/css/bootstrap-theme.css
@@ -671,10 +671,21 @@ pre code {
 .container:after {
   clear: both;
 }
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
 .row {
   margin-left: -15px;
   margin-right: -15px;
 }
+
 .row:before,
 .row:after {
   content: " ";
@@ -4457,7 +4468,7 @@ a.thumbnail:focus {
   width: 0%;
   height: 100%;
   font-size: 12px;
-  color: #ffffff;
+  color: #000;
   text-align: center;
   background-color: #007aff;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
