--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -24,6 +24,9 @@
         <![endif]-->
         <!-- Fix NavBar -->
         <link rel="stylesheet" href="/css/navbarfix.css"/>
+         <!-- Chat CSS and JS -->
+        <link rel="stylesheet" href="/css/Chat.css">
+        <script src="js/ChatFunctionality.js"></script>
         <!-- ck editor -->
         <script src="../src/assets/ckeditor/ckeditor.js"></script>
         <!-- javascripts -->
@@ -59,66 +62,181 @@
 
     <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;" ">
-        <div class="container" >
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand" style="padding: 8px 15px; ">
-                    <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;"></div>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Followers</a>
-                    </li>
+   <!-- Navigation -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+    <div class="row no-gutters ">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header ">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-brand" style="padding: 8px 15px; ">
+          <img src="img/12048903_10153709165902375_2021103471_n.jpg" style="width: 40px;">
+        </div>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <!-- user login dropdown end -->
 
-                    <li>
-                        <a href="#">Interests</a>
-                    </li>
-                    <li>
-                        <a href="#">Groups</a>
-                    </li>
-                    <li>
-                        <a href="#">Events</a>
-                    </li>
-                    <li>
-                        <a href="/submitresume">Community</a>
-                    </li>
-                    <li>
-                        <a href="/createproject">Projects</a>
-                    </li>
-                    <li>
-                        <a href="/aboutus">About PIPS</a>
-                    </li>
-                </ul>
-                <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 13px;">
-                    <div id="search">
-                        <a href="" class="glyphicon glyphicon-search" style="font-size: 25px;"></a>
-                    </div>
-                </li>
-                <li class="pull-right" style="vertical-align: middle; display: table-cell; margin: 10px;">
-                    <div>
-                        <input class="form-control" type="text" id="lg">
-                    </div>
-                </li>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="/profile"><i class="fa fa-user"></i> Profile</a>
+          </li>
+          <li>
+            <a href="/fix"><i class="fa fa-users"></i> Followers</a>
+          </li>
+          <li>
+            <a href="/catalogueprojects"><i class="fa fa-briefcase"></i> Projects</a>
+          </li>
+          <li>
+            <a href="/cataloguegroups"><i class="fa fa-beer"></i> Groups</a>
+          </li>
+          <li>
+            <a href="/catalogueevents"><i class="fa fa-calendar"></i> Events</a>
+          </li>
+          <li>
+            <a href="/viewalltags"><i class="fa fa-tags"></i> Tags</a>
+          </li>
+          <li>
+            <a href="/submitsuggestion"><i class="fa fa-envelope"></i> Contact PIPS</a>
+          </li>
+         </ul>
+         <div style="float:right">
+         <ul class="nav navbar-nav"> 
+          <!-- user login dropdown start-->
+          <li class="dropdown pull-right">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <span class="profile-ava">
+                    <img alt="" src="img/avatar1_small.jpg">
+              </span>
+              <span class="username">Jenifer Smith</span>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu extended logout">
+              <div class="log-arrow-up"></div>
+              <li>
+                <a href="#"><i class="icon_mail_alt"></i> My Inbox</a>
+              </li>
+              <li>
+                <a href="#"><i class="icon_clock_alt"></i> Account Settings</a>
+              </li>
+              <li>
+                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+              </li>
+
+            </ul>
+          </li>
+          <!-- alert notification start-->
+          <li id="alert_notificatoin_bar" class="dropdown pull-right">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <i class="icon-bell-l"></i>
+              <span class="badge bg-important">7</span>
+            </a>
+            <ul class="dropdown-menu extended notification">
+              <div class="notify-arrow notify-arrow-blue"></div>
+              <li>
+                <p class="blue">You have 4 new notifications</p>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-primary"><i class="icon_profile"></i></span> Friend Request
+                  <span class="small italic pull-right">5 mins</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-warning"><i class="icon_pin"></i></span> John location.
+                  <span class="small italic pull-right">50 mins</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-danger"><i class="icon_book_alt"></i></span> Project 3 Completed.
+                  <span class="small italic pull-right">1 hr</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="label label-success"><i class="icon_like"></i></span> Mick appreciated your work.
+                  <span class="small italic pull-right"> Today</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">See all notifications</a>
+              </li>
+            </ul>
+          </li>
+          <!-- alert notification end-->
+
+          <li class="pull-left" style="vertical-align: top; display: table-cell; margin: 13px;">
+            <div id="search">
+              <a href="" class="glyphicon glyphicon-search " style="font-size: 25px;"></a>
             </div>
-            <!-- /.navbar-collapse -->
-            <!-- /.container -->
-    </nav>
+          </li>
+          <li class="pull-left" style="vertical-align: middle; display: table-cell; margin: 10px;">
+            <div>
+              <input class="form-control" type="text" id="lg">
+            </div>
+          </li>
+
+        </ul>
+        </div>
+      </div>
+      <!-- notificatoin dropdown end-->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- Chat Seccion-->
+              <div class="col-md-2  pull-right">
+                <div class="chat-sidebar">
+                  <div class="sidebar-name">
+                    <!-- Pass username and display name to register popup -->
+                    <a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>Narayan Prusty</span>
+                    </a>
+                  </div>
+                  <div class="sidebar-name">
+                    <a href="javascript:register_popup('qnimate', 'QNimate');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>QNimate</span>
+                    </a>
+                  </div>
+                  <div class="sidebar-name">
+                    <a href="javascript:register_popup('qscutter', 'QScutter');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>QScutter</span>
+                    </a>
+                  </div>
+                  <div class="sidebar-name">
+                    <a href="javascript:register_popup('qidea', 'QIdea');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>QIdea</span>
+                    </a>
+                  </div>
+                  <div class="sidebar-name">
+                    <a href="javascript:register_popup('qazy', 'QAzy');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>QAzy</span>
+                    </a>
+                  </div>
+                  <div class="sidebar-name">
+                    <a href="javascript:register_popup('qblock', 'QBlock');">
+                      <img width="30" height="30" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/v/t1.0-1/p50x50/1510656_10203002897620130_521137935_n.jpg?oh=572eaca929315b26c58852d24bb73310&oe=54BEE7DA&__gda__=1418131725_c7fb34dd0f499751e94e77b1dd067f4c"
+                      />
+                      <span>QBlock</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
         <div class="container">
             {{{ body }}}
         </div>
