--- a/src/views/catalogue/CatalogueFollowers.hbs
+++ b/src/views/catalogue/CatalogueFollowers.hbs
@@ -9,10 +9,9 @@
           <section class="wrapper">
             <div class="row">
               <div class="col-lg-12">
-                <h3 class="page-header"><i class="fa fa-beer"></i> Group Catalogue</h3>
+                <h3 class="page-header"><i class="fa fa-users"></i> Followers</h3>
                 <ol class="breadcrumb">
-                  <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                  <li><i class="fa fa-beer"></i>Group Catalogue</li>
+                  <li><i class="fa fa-users"></i>Followers</li>
                 </ol>
               </div>
             </div>
@@ -20,7 +19,7 @@
               <div class="col-lg-12">
                 <section class="panel">
                   <div class="panel-body bio-graph-info">
-                    <h1><i class="fa fa-beer"></i>Groups</h1>
+                    <h1><i class="fa fa-users"></i>Groups</h1>
                     <hr>
                     <form class="form-horizontal" role="form">
                       <div class="form-group">
