--- a/src/views/page/LoginPage.hbs
+++ b/src/views/page/LoginPage.hbs
@@ -1,7 +1,7 @@
 <body class="login-img3-body">
   <div class="container">
     <br></br>
-    <form class="login-form" action="index.html">
+    <form class="login-form" action="profile">
       <div class="login-wrap">
         <div>
           <p><b>Sign-Up or Login</p>
@@ -9,18 +9,20 @@
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-user"></i></span>
-          <input type="text" class="form-control" placeholder="Username" autofocus>
+          <input type="text" class="form-control" placeholder="Username" name="Username" autofocus>
+         
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="fa fa-key"></i></span>
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control"  name="Password" placeholder="Password">
+          
         </div>
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
           <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
         </label>
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-        <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
+        <button  class="btn btn-primary btn-lg btn-block" type="submit" >Login</button> 
+        <a href="createaccount" class="btn btn-info btn-lg btn-block" >Signup</a> 
       </div>
     </form>
   </div>
