--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -24,11 +24,8 @@
         <![endif]-->
         <!-- Fix NavBar -->
         <link rel="stylesheet" href="/css/navbarfix.css"/>
-         <!-- Chat CSS and JS -->
-        <link rel="stylesheet" href="/css/Chat.css">
-        <script src="js/ChatFunctionality.js"></script>
         <!-- ck editor -->
-        <script src="../src/assets/ckeditor/ckeditor.js"></script>
+        <script src="/src/assets/ckeditor/ckeditor.js"></script>
         <!-- javascripts -->
         <script src="js/jquery.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -45,9 +42,6 @@
         <script src="js/bootstrap-switch.js"></script>
         <!--custom tagsinput-->
         <script src="js/jquery.tagsinput.js"></script>
-
-        <!-- json things -->
-        <script src="json/tags.json"></script>
 
         <!-- bootstrap-wysiwyg -->
         <script src="js/jquery.hotkeys.js"></script>
