--- a/src/views/submit/SubmitIPA.hbs
+++ b/src/views/submit/SubmitIPA.hbs
@@ -1,93 +1,85 @@
 <body>
-  <!-- Page Content -->
-  <div class="container">
-    <!--main content start-->
-    <main>
-      <div class="container-fluid ">
-        <div class="row ">
-          <div class="col-lg-14">
-            <!-- Page Content -->
-
-            <section class="wrapper">
-              <div class="row">
-                <div class="col-lg-12">
-                  <h3 class="page-header"><i class="fa fa-university"></i>Submit IPA</h3>
-                  <ol class="breadcrumb">
-                    <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-                    <li><i class="fa fa-tasks"></i>Project Page</li>
-                    <li><i class="fa fa-university"></i>Submit IPA</li>
-                  </ol>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-lg-12">
-                  <section class="panel">
-                    <header class="panel-heading">
-                      Project Summary
-                    </header>
-                    <div class="panel-body">
-                      <form class="form-horizontal " method="get">
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Name of Project</label>
-                          <div class="col-sm-10">
-                            <p class="form-control-static">Test Project</p>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Owner</label>
-                          <div class="col-sm-10">
-                            <p class="form-control-static">john.doe@upr.edu</p>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-2 control-label">Project Description</label>
-                          <div class="col-sm-10">
-                            <p class="form-control-static">Test project description</p>
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Tags</label>
-                          <div class="col-lg-10">
-                            <input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
-                          </div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-lg-2 control-label">Project Page Creator Email</label>
-                          <div class="col-lg-10">
-                            <p class="form-control-static">john.doe@upr.edu</p>
-                          </div>
-                        </div>
-                      </form>
-                  </section>
-                  </div>
-                  <div class="col-lg-12">
-                    <section class="panel">
-                      <header class="panel-heading">
-                        IPA File Upload
-                      </header>
-                      <div class="panel-body">
-                        <form class="form-horizontal " method="get">
-                          <div class="form-group">
-                            <label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
-                            <div class="col-sm-10">
-                              <input type="file" id="exampleInputFile">
-                              <p class="help-block">Example block-level help text here.</p>
-                            </div>
-                          </div>
-                          <button type="submit" class="btn btn-primary pull-right">Create</button>
-                      </div>
-                  </div>
-                  </form>
-                  </section>
-                </div>
-                <!-- Basic Forms & Horizontal Forms-->
-                <!-- page end-->
-            </section>
-            </div>
-    </main>
-    <!--main content end-->
-    </div>
-
-    <!-- container section end -->
+	<!-- Page Content -->
+	<div class="container">
+	<!--main content start-->
+	<main>
+		<div class="container-fluid ">
+		<div class="row ">
+		<div class="col-lg-14">
+		
+		<!-- Page Content -->
+		<section class="wrapper">
+			
+		<!-- Path Header -->	
+		<div class="row">
+			<div class="col-lg-12">
+			<h3 class="page-header"><i class="fa fa-university"></i>Submit IPA</h3>
+			<ol class="breadcrumb">
+				<li><i class="fa fa-tasks"></i>Project Page</li>
+				<li><i class="fa fa-university"></i>Submit IPA</li>
+			</ol>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-lg-12">
+			<section class="panel">
+			<header class="panel-heading">Project Summary</header>
+			<div class="panel-body">
+				<form class="form-horizontal " method="get">
+				<div class="form-group">
+				<label class="col-sm-2 control-label">Name of Project</label>
+				<div class="col-sm-10">
+					<p class="form-control-static">Test Project</p>
+				</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Project Owner</label>
+					<div class="col-sm-10">
+					<p class="form-control-static">john.doe@upr.edu</p>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Project Description</label>
+					<div class="col-sm-10">
+					<p class="form-control-static">Test project description</p>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-lg-2 control-label">Project Tags</label>
+					<div class="col-lg-10">
+					<input name="tagsinput" id="tagsinput" class="tagsinput" value="Robots,Biology" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-lg-2 control-label">Project Page Creator Email</label>
+					<div class="col-lg-10">
+					<p class="form-control-static">john.doe@upr.edu</p>
+					</div>
+				</div>
+				</form>
+			</section>
+			</div>
+			<div class="col-lg-12">
+				<section class="panel">
+				<header class="panel-heading">IPA File Upload</header>
+				<div class="panel-body">
+				<form class="form-horizontal " method="get">
+				<div class="form-group">
+				<label class="col-sm-2 control-label" for="exampleInputFile">File input</label>
+				<div class="col-sm-10">
+				<input type="file" id="exampleInputFile">
+				<p class="help-block">Example block-level help text here.</p>
+				</div>
+				</div>
+				<button type="submit" class="btn btn-primary pull-right">Create</button>
+				</div>
+			</div>
+			</form>
+			</section>
+			</div>
+		</section>
+		</div>
+	</main>
+	</div>
 </body>
