--- a/src/views/view/ViewAllTags.hbs
+++ b/src/views/view/ViewAllTags.hbs
@@ -1,75 +1,60 @@
 <body>
 	<!-- Page Content -->
 	<div class="container">
-		<!--main content start-->
-		<main>
-			<div class="container-fluid ">
-				<div class="row ">
-					<div class="col-lg-14">
-						<!-- Page Content -->
-						<section class="wrapper">
-							<div class="row">
-								<div class="col-lg-12">
-									<h3 class="page-header"><i class="fa fa-tags"></i> Tags</h3>
-									<ol class="breadcrumb">
-										<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-										<li><i class="fa fa-tags"></i>Tags</li>
-									</ol>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12">
-									<section class="panel">
-										<header class="panel-heading">Tag List</header>
-										<div class="panel-body">
-											<div class="form">
-												<form action="#" class="form-horizontal">
-													<div class="form-group">
-														<div class="col-sm-9">
-
-															<table class="table">
-																<thead>
-																	<tr>
-																		<th>Tagged Content</th>
-																		<th>Tag</th>
-																	</tr>
-																</thead>
-																<tbody>
-                                                                    <script>
-																		var tagList = require('./tags.json')
-
-																		
-																		tagList.tags.forEach(function(item) { 
-																		
-																		document.write("<tr>") 
-																		
-																		document.write("<td>item.count</td>")
-																		
-																		document.write("<td>")
-																		
-																		document.write("<p>Quack</p>")
-																		
-																		document.write("/td")
-																		
-																		document.write("</tr>")	
-																		
-																		}
-																		 </script>
-																</tbody>
-															</table>
-														</div>
-													</div>
-											</div>
-											</form>
-										</div>
-										<br/>
-								</div>
-								</section>
-							</div>
-					</div>
-					</section>
-				</div>
-		</main>
+	<!--main content start-->
+	<main>
+		<div class="container-fluid ">
+		<div class="row ">
+		<div class="col-lg-14">
+			
+		<!-- Page Content -->
+		<section class="wrapper">
+			
+		<!-- Path Header -->
+		<div class="row">
+			<div class="col-lg-12">
+			<h3 class="page-header"><i class="fa fa-tags"></i> Tags</h3>
+			<ol class="breadcrumb">
+				<li><i class="fa fa-tags"></i>Tags</li>
+			</ol>
+			</div>
 		</div>
-	</div>
+		
+		<div class="row">
+			<div class="col-lg-12">
+			<section class="panel">
+			<header class="panel-heading">Tag List</header>
+			<div class="panel-body">
+			<div class="form">
+			<form action="#" class="form-horizontal">
+			<div class="form-group">
+			<div class="col-sm-12">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Tagged Content</th>
+						<th>Tag</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>						
+						<td>1</td>
+						<td><button type="button" class="btn btn-success"><i class="fa fa-tag"></i> Science</button></td>
+					</tr>
+				</tbody>
+			</table>
+			</div>
+			</div>
+			</form>
+			</div>
+			</div>
+			</section>
+			</div>
+		</div>
+		</div>
+		</div>
+		</section>
+		</div>
+		</div>
+	</main>
 </body>
