--- a/src/views/catalogue/CatalogueProjects.hbs
+++ b/src/views/catalogue/CatalogueProjects.hbs
@@ -25,7 +25,7 @@
                       <form class="form-horizontal" role="form">
                         <div class="form-group">
                           <div class="col-lg-2">
-                            <img src="img\pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
+                            <img src="img/pips_logo.jpg" class="img-thumbnail img-responsive" alt="placeholder" width="100"
                             height="100">
                           </div>
                           <div class="col-lg-4">
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-group">
                           <div class="col-lg-2">
-                            <img src="img\wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
+                            <img src="img/wacky-tube-man.gif" class="img-thumbnail img-responsive" alt="placeholder" width="100" height="100">
                           </div>
                           <div class="col-lg-4">
                             <h1>Wacky Inflatable Tube Man Simulator</h1>
