--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,6 +35,7 @@
 
         <!-- jquery ui -->
         <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+        <!--AngularJS-->
 
         <!--custom checkbox & radio-->
         <script type="text/javascript" src="js/ga.js"></script>
@@ -58,7 +59,7 @@
     <body>
 
    <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+  <nav ng-app="app" ng-controller="appCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header ">
@@ -100,7 +101,7 @@
           </li>
          </ul>
          <div style="float:right">
-         <ul class="nav navbar-nav"> 
+         <ul class="nav navbar-nav">
           <!-- user login dropdown start-->
           <li class="dropdown pull-right">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
