--- a/src/views/layouts/Loginlayout.hbs
+++ b/src/views/layouts/Loginlayout.hbs
@@ -17,6 +17,8 @@
         <link href="/css/style.css" rel="stylesheet"/>
         <link href="/css/style-responsive.css" rel="stylesheet" />
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+        <!--AngularJS-->
+        <script src="/js/angular.min.js"></script>
         <!--[if lt IE 9]>
         <script src="/js/html5shiv.js"></script>
         <script src="/respond.min.js"></script>
