--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,6 +18,9 @@
         <link href="/css/style-responsive.css" rel="stylesheet" />
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
         <!--[if lt IE 9]>
+        <!--AngularJS-->
+        <script src="/js/angular.min.js"></script>
+
         <script src="/js/html5shiv.js"></script>
         <script src="/respond.min.js"></script>
         <script src="/js/lte-ie7.js"></script>
@@ -27,39 +30,37 @@
         <!-- ck editor -->
         <script src="/src/assets/ckeditor/ckeditor.js"></script>
         <!-- javascripts -->
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="/js/jquery.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
         <!-- nice scroll -->
-        <script src="js/jquery.scrollTo.min.js"></script>
-        <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+        <script src="/js/jquery.scrollTo.min.js"></script>
+        <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
 
         <!-- jquery ui -->
-        <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-        <!--AngularJS-->
-
+        <script src="/js/jquery-ui-1.9.2.custom.min.js"></script>
         <!--custom checkbox & radio-->
         <script type="text/javascript" src="js/ga.js"></script>
         <!--custom switch-->
-        <script src="js/bootstrap-switch.js"></script>
+        <script src="/js/bootstrap-switch.js"></script>
         <!--custom tagsinput-->
-        <script src="js/jquery.tagsinput.js"></script>
+        <script src="/js/jquery.tagsinput.js"></script>
 
         <!-- bootstrap-wysiwyg -->
-        <script src="js/jquery.hotkeys.js"></script>
-        <script src="js/bootstrap-wysiwyg.js"></script>
-        <script src="js/bootstrap-wysiwyg-custom.js"></script>
+        <script src="/js/jquery.hotkeys.js"></script>
+        <script src="/js/bootstrap-wysiwyg.js"></script>
+        <script src="/js/bootstrap-wysiwyg-custom.js"></script>
         <!-- ck editor -->
         <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
         <!-- custom form component script for this page-->
-        <script src="js/form-component.js"></script>
+        <script src="/js/form-component.js"></script>
         <!-- custome script for all page -->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
     </head>
 
     <body>
 
    <!-- Navigation -->
-  <nav ng-app="app" ng-controller="appCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
+  <nav ng-app="app" ng-controller="MainController" class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color: black;">
     <div class="row no-gutters ">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header ">
